--- a/app/views/dashboard/company/payment_documents/_header.html.haml
+++ b/app/views/dashboard/company/payment_documents/_header.html.haml
@@ -3,9 +3,8 @@
 - content_for :page_header do
   %h1= yield :title
 
-%nav.panel-nav
-  %ul.tabs.pull-left
-    %li{class: class_for_active_tab('sent_to_me')}
-      = link_to t('dashboard.payment_documents.files_sent_to_me'), sent_to_me_dashboard_company_payment_documents_path
-    %li{class: class_for_active_tab('uploaded_by_me')}
-      = link_to t('dashboard.payment_documents.files_uploaded_by_me'),uploaded_by_me_dashboard_company_payment_documents_path
+- tabs = []
+- tabs.push({ name: t('dashboard.payment_documents.files_sent_to_me'), url: sent_to_me_dashboard_company_payment_documents_path, active: params[:action] == 'sent_to_me' })
+- tabs.push({ name: t('dashboard.payment_documents.files_uploaded_by_me'), url: uploaded_by_me_dashboard_company_payment_documents_path, active: params[:action] == 'uploaded_by_me' })
+
+= dashboard_panel_multi_tabs(tabs)
