--- a/lib/tasks/uot/templates/listings_show.liquid
+++ b/lib/tasks/uot/templates/listings_show.liquid
@@ -13,6 +13,7 @@
             <div class="content">
                 <div class="listing-properties">
                     <div class="overview">
+                      {% if listing.properties.project_contact != blank %}
                       <h2>Client Name:
                         <span>{{ listing.properties.project_contact }}
                           {% if listing.creator.seller_properties['linkedin_url'] != blank %}
@@ -20,6 +21,7 @@
                           {% endif %}
                         </span>
                       </h2>
+                      {% endif %}
                       <div class="meta">Project posted <b>{{ listing.created_at | time_ago_in_words }}</b> ago</div>
                     </div>
 
