NM-5518 Invalid table format

--- a/lib/tasks/uot/templates/dashboard_company_analytics_show.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_analytics_show.liquid
@@ -22,7 +22,7 @@
       </figure>
 
       <div class="table-responsive">
-        <table class="table.table-simple">
+        <table class="table table-simple">
           <thead>
             <tr>
               <th>{{ 'dashboard.analytics.columns.amount') | t }}</th>
