NM-5553 & NM-5554 changes

--- a/app/views/dashboard/offers/_offer.html.haml
+++ b/app/views/dashboard/offers/_offer.html.haml
@@ -1,1 +1,4 @@
-Offer #{offer.id}
+= link_to "View offer #{offer.id}", dashboard_order_path(offer)
+|
+= link_to "Edit offer #{offer.id}", edit_dashboard_order_path(offer)
+
