--- a/app/views/checkout/show.html.haml
+++ b/app/views/checkout/show.html.haml
@@ -7,95 +7,10 @@
       = sidebar
 
   .checkout-wizard-main
+    - if @order.inactive? || @order.unconfirmed?
+
+      = render 'checkout/form'
+
     %section.checkout-form
       = render 'checkout/summary', order: @order
 
-    - if @order.inactive? || @order.unconfirmed?
-
-      = simple_form_for @order, as: :order,  url: @update_path || order_checkout_path(@order), html: { id: 'checkout-form', class: 'form-horizontal' } do |f|
-
-        - if f.object.reservation_type
-
-          = f.simple_fields_for :user, f.object.user do |user|
-            = f.simple_fields_for :properties, f.object.properties do |properties_form|
-              - custom_attribute_names = f.object.reservation_type.custom_attributes.collect { |custom_attribute| custom_attribute.name }
-
-
-              - form_components_count = @order.all_form_components.count
-
-              -# Form components navigation
-              - if @order.reservation_type.step_checkout && form_components_count > 0
-                .checkout-wizard-steps
-                  %ol
-                    - f.object.all_form_components.each_with_index do |form_component, index|
-                      - if form_component.form_fields_except(@order.skip_steps).any?
-                        %li{class: form_component.id == @order.next_form_component_id ? 'current' : nil}= form_component.name
-
-              -# Single form component
-              - f.object.all_form_components.each_with_index do |form_component, index|
-                - if form_component.form_fields_except(@order.skip_steps).any?
-                  - if !@order.reservation_type.step_checkout || form_component.id == @order.next_form_component_id
-
-                    %section.checkout-form{"data-form-component-name": form_component.name_to_id}
-                      %h2
-                        - if form_components_count > 1
-                          %span.step-no= "#{index + 1}."
-                        = form_component.name
-
-                      - form_component.form_fields.each do |form_field|
-                        - model = form_field.keys.first
-                        - field = form_field[model]
-                        - next if field =~ /shipping/ && !@order.with_delivery?
-                        - if model == 'user'
-                          - if user.object.field_blank_or_changed?(field)
-                            = render :partial => 'registrations/attributes', :locals => { f: user, only_inputs: [field.to_sym], country: @country}
-                        - if model == 'buyer'
-                          = user.simple_fields_for :buyer_profile, user.object.get_buyer_profile do |buyer_profile_form|
-                            = buyer_profile_form.simple_fields_for :properties, user.object.buyer_profile.properties do |buyer_properties_form|
-                              - if (category = buyer_profile_form.object.instance_profile_type.try(:categories).try(:roots).try(:detect) { |c| "Category - #{c.name}".to_sym == field.to_sym}).present?
-                                - if buyer_profile_form.object.category_blank_or_changed?(category)
-                                  %div{"data-categories-controller": true}
-                                    = render partial: 'shared/category_old_bootstrap', locals: { category: category, f: buyer_profile_form, categorizable: buyer_profile_form.object.instance_profile_type }
-                              - else
-                                - if buyer_profile_form.object.field_blank_or_changed?(field)
-                                  - buyer_profile_form.object.instance_profile_type.try(:custom_attributes).try(:each) do |attribute|
-                                    = draw_attribute_for_form(attribute, buyer_properties_form) if field.to_sym == attribute.name.to_sym
-                        - if model == 'reservation'
-                          - if (category = f.object.reservation_type.try(:categories).try(:roots).try(:detect) { |c| "Category - #{c.name}".to_sym == field.to_sym}).present?
-                            %div{"data-categories-controller": true}
-                              = render partial: 'shared/category_old_bootstrap', locals: { category: category, f: f, categorizable: f.object.reservation_type }
-
-                          - if custom_attribute_names.include?(field)
-                            - if field == 'service_category'
-                              = draw_attribute_for_form(f.object.reservation_type.custom_attributes.find_by(name: field), properties_form, false, disabled: get_disabled_categories(f.object.transactable) , checked: (f.object.properties[:service_category].presence || get_categories_from_search) - get_disabled_categories(f.object.transactable))
-                            - else
-                              = draw_attribute_for_form(f.object.reservation_type.custom_attributes.find_by(name: field), properties_form, false)
-                          - else
-                            = render :partial => 'checkout/attributes', :locals => { f: f, only_inputs: [field.to_sym], country: @country }
-                    - if form_component.id == @order.next_form_component_id ||  @order.next_form_component_id.nil? || !@order.reservation_type.try(:step_checkout?)
-                      .checkout-wizard-actions
-                        .row
-                          - if @order.reservation_type.try(:step_checkout?) && @order.completed_form_component_ids.any? && !@order.next_form_component_id.nil?
-                            .span3
-                              = link_to back_order_checkout_path(@order), class: 'btn blue prev', data: { disable_with: t('general.processing') } do
-                                = t('buy_sell_market.checkout.buttons.back')
-
-                          .span3.pull-right
-                            - if @order.reservation_type.try(:step_checkout?)
-                              - if f.object.all_form_components.one?
-                                %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
-                                  = t('reservations_review.buttons.request')
-                              - else
-                                %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
-                                  = t('buy_sell_market.checkout.buttons.continue')
-                            - elsif f.object.all_form_components.size == index + 1
-                              %button.btn.blue.next{ data: { disable_with: t('general.processing') }}
-                                = t('reservations_review.buttons.request')
-
-- content_for :script do
-  :javascript
-    $(function() {
-      $(document).trigger('init:phonenumberfieldsform.nearme', 'form#checkout-form');
-      window.sessioncamConfiguration.customDataObjects.push( { key: "event", value: "booking_modal_opened" } );
-      $(document).trigger('init:tooltips.nearme', '.reservation-summary');
-    });
