NM-5558 fix pro bono

--- a/app/views/shared/_single_payment.html.haml
+++ b/app/views/shared/_single_payment.html.haml
@@ -1,4 +1,4 @@
-- if f.object.respond_to?(:payable?)
+- if f.object.respond_to?(:payable)
   - f.object.payable.host_line_items.each do |hli|
     .alert.alert-info= t('dashboard.payments.merchant_fee_charge', name: hli.name, price: humanized_money_with_cents_and_symbol(hli.unit_price))
 
