--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -31,7 +31,7 @@
                                   <select id="filter-industry" class="unstyled-select" name='category_ids[]'>
                                       <option value="">Please Select --</option>
                                       {% for category in root_category.children %}
-                                        <option {% if searcher.category_ids contains subcat.id %}selected{% endif %} value='{{subcat.id}}'>{{ category.name }}</option>
+                                        <option {% if searcher.category_ids contains subcat.id %}selected{% endif %} value='{{category.id}}'>{{ category.name }}</option>
                                         {% if category.children.size > 0 %}
                                           {% for subcat in category.children %}
                                             <option {% if searcher.category_ids contains subcat.id %}selected{% endif %} value='{{subcat.id}}'>{{ subcat.name }}</option>
