--- a/lib/tasks/uot/templates/dashboard_company_transactables_index.liquid
+++ b/lib/tasks/uot/templates/dashboard_company_transactables_index.liquid
@@ -57,7 +57,9 @@
       {% endform_for %}
     </div>
 
+    {% if current_user.has_seller_profile? %}
     <p class="find-expert-link"><a href="/search" class="btn btn-primary">Find an Expert</a></p>
+    {% endif %}
 </div>
 
 {% assign filter_params = "&amp;filter[properties][workplace_type]=" | append: params.filter.properties.workplace_type | append: "&amp;order_by=" | append: params.order_by %}
