NM-5579 Modals will now work in blog view

--- a/app/views/layouts/blog.html.haml
+++ b/app/views/layouts/blog.html.haml
@@ -34,4 +34,4 @@
 
     = yield(:body_bottom)
 
-    = render 'shared/javascripts/footer', entry: 'blog', analytics: true
+    = render 'shared/javascripts/footer', entry: 'blog', analytics: true, include_modal: true
