--- a/app/views/dashboard/order_items/_form.html.haml
+++ b/app/views/dashboard/order_items/_form.html.haml
@@ -5,10 +5,10 @@
     %span.help-block= f.full_error :line_items
   .transactable-line-items.nested-fields-set
     = f.simple_fields_for :transactable_line_items do |transactable_line_item_form|
-      = render 'transactable_line_item', f: transactable_line_item_form, readonly: readonly
+      = render 'transactable_line_item', f: transactable_line_item_form, readonly: readonly, free_hint: true
     - if readonly == false
       .add-link
-        = link_to_add_association t('dashboard.order_items.add_time_expenses') , f, :transactable_line_items, partial: 'transactable_line_item', id: "add_new_transactable_line_item", class: 'btn btn-primary'
+        = link_to_add_association t('dashboard.order_items.add_time_expenses') , f, :transactable_line_items, partial: 'transactable_line_item', id: "add_new_transactable_line_item", class: 'btn btn-primary', render_options: { locals: { free_hint: true } }
 
   .transactable-line-items.nested-fields-set
     = f.simple_fields_for :additional_line_items do |additional_line_item_form|
