--- a/app/views/dashboard/order_items/_line_item_fields.html.haml
+++ b/app/views/dashboard/order_items/_line_item_fields.html.haml
@@ -1,3 +1,4 @@
+- free_hint ||= false
 .row
   .col-md-4
     = f.input :name, required: true, input_html: { readonly: readonly }
@@ -7,7 +8,11 @@
   .col-sm-4
     = f.input :quantity, required: true, input_html: { 'data-quantity-input': true, readonly: readonly}
   .col-sm-4
+    - if @order.transactable.action_free_booking? && free_hint
+      - readonly = true
     = f.input :unit_price, required: true, input_html: { 'data-price-input': true, readonly: readonly}
+    - if @order.transactable.action_free_booking? && free_hint
+      =f.hint t('dashboard.order_items.free_unit_price')
   .col-sm-4.text-right
     %label.control-label= t('dashboard.order_items.total')
     .sub-total{ data: { subtotal: true, currency: @order_item.unit_price.symbol, amount: f.object.total_price } }
