--- a/app/views/shared/_single_payment.html.haml
+++ b/app/views/shared/_single_payment.html.haml
@@ -1,6 +1,6 @@
 - if f.object.respond_to?(:payable)
   - f.object.payable.host_line_items.each do |hli|
-    .alert.alert-info= t('dashboard.payments.merchant_fee_charge', name: hli.name, price: humanized_money_with_cents_and_symbol(hli.unit_price))
+    .alert.alert-info= t('dashboard.payments.merchant_fee_charge', name: hli.name, price: humanized_money_with_cents_and_symbol(hli.unit_price)).html_safe
 
 - if f.object.payment_methods.credit_card.blank?
   .alert.warning
@@ -16,7 +16,7 @@
   = render 'shared/payment_methods/credit_card', f: f, payment_method: payment_method
 
   - content_for :dialog_actions do
-    %button{:type => "submit"}= t "dashboard.host_reservations.actions.accept"
+    %button{type: "submit", data: { disable_with: t('general.processing') } }= t "dashboard.host_reservations.actions.accept"
 
 :javascript
   $(function() { $(document).trigger('init:paymentmodal.nearme'); });
