--- a/lib/tasks/uot/templates/registrations_show.liquid
+++ b/lib/tasks/uot/templates/registrations_show.liquid
@@ -83,7 +83,7 @@
                     {% endif %}
 
                     {% if user.buyer_properties['bio'] != blank %}
-                      <hr>
+                      <div class='mid-h'>Biography</div>
                       <p>{{ user.buyer_properties['bio'] }}</p>
                     {% endif %}
 
