NM-5564 Fixed wish list items in Firefox

--- a/app/frontend/stylesheets/new_ui/modules/_wish-list.scss
+++ b/app/frontend/stylesheets/new_ui/modules/_wish-list.scss
@@ -126,6 +126,8 @@ $wish-list-item-padding: 20px;
 }
 
 .wish-list__item-user {
+    display: block;
+
     .link {
         position: relative;
         padding: 0 0 100%;
