--- a/lib/tasks/uot/templates/search_list.liquid
+++ b/lib/tasks/uot/templates/search_list.liquid
@@ -115,90 +115,97 @@
             </div>
 
             <div class="search-results-items">
-              {% for user in searcher.results %}
-                  <article class="user-a" id="user-{{ user.id }}">
-                      <div class="wrapper">
-                          <header class="header">
-                              <figure>
-                                  <img src="{{user.avatar_url_big}}" alt="{{ user.name }}">
-                              </figure>
-                              <h2><a href="{{ user.user_profile_url }}">{{ user.name }}</a></h2>
+                {% for user in searcher.results %}
+                    <article class="user-a" id="user-{{ user.id }}">
+                        <div class="wrapper">
+                            <header class="header">
+                                <figure>
+                                    <img src="{{user.avatar_url_big}}" alt="{{ user.name }}">
+                                </figure>
+                                <h2><a href="{{ user.user_profile_url }}">{{ user.name }}</a></h2>
 
-                              <div class="properties">
-                                  <p class="price">
-                                      <strong>{{ user.buyer_properties.hourly_rate }} USD / hr</strong>
-                                  </p>
-                                  <dl class="property">
-                                      <dt>Discounts:</dt>
-                                      <dd>{{ user.buyer_properties.discounts_available | humanize }}</dd>
-                                  </dl>
-                              </div>
+                                <div class="properties">
+                                    <p class="price">
+                                        <strong>{{ user.buyer_properties.hourly_rate }} USD / hr</strong>
+                                    </p>
+                                    <dl class="property">
+                                        <dt>Discounts:</dt>
+                                        <dd>{{ user.buyer_properties.discounts_available | humanize }}</dd>
+                                    </dl>
+                                </div>
 
-                              <div class="contact">
-                                  <a class="button-b action-message" data-href='{{ user.user_message_path }}' data-modal='true'>Send Message</a>
-                                  {{ user.click_to_call_button }}
-                              </div>
-                          </header>
+                                <div class="contact">
+                                    <a class="button-b action-message" data-href='{{ user.user_message_path }}' data-modal='true'>Send Message</a>
+                                    {{ user.click_to_call_button }}
+                                </div>
+                            </header>
 
-                          {% assign aoe_category = user.formatted_buyer_categories["Area Of Expertise"] %}
-                          {% assign industry_category = user.formatted_buyer_categories['Industry'] %}
-                          {% assign languages_category = user.buyer_categories['Languages'] %}
+                            <ul class="actions-a">
+                            {% if current_user != blank and current_user.has_seller_profile? %}
+                              <li><a href="#project-invite-{{ user.id }}" class="button-a" data-project-invite-trigger>Invite to project</a></li>
+                            {% endif %}
 
-                          {% if aoe_category.children.size > 0 || industry_category.children.size > 0 || languages_category.children.size > 0 || user.buyer_properties.bio != blank %}
-                              <div class="content">
-                                  {% if aoe_category.children.size > 0 %}
-                                      <h3>{{ aoe_category.name }}</h3>
-                                      <ul class="short-list">
-                                          {% for expertise in aoe_category.children %}
-                                          <li>{{ expertise[-1] }}</li>
-                                          {% endfor %}
-                                      </ul>
-                                  {% endif %}
+                            <li>{% include 'shared/components/wish_list_button_injection.html', object: user %}</li>
+                            {% if user.has_active_blog? %}
+                              <li><a href="{{ user.user_blog_posts_list_path }}" class="button-b action-blog">View Blog</a></li>
+                            {% endif %}
+                            {% if user.buyer_properties['linkedin_url'] != blank %}
+                              <li><a href="{{ user.buyer_properties['linkedin_url'] }}" class="button-b action-linkedin" target="_blank">LinkedIn Bio</a></li>
+                            {% endif %}
+                            </ul>
 
-                                  {% if industry_category.children.size > 0 %}
-                                      <h3>{{ industry_category.name }}</h3>
-                                      <ul class="short-list">
-                                          {% for industry in industry_category.children %}
-                                          <li>{{ industry[-1] }}</li>
-                                          {% endfor %}
-                                      </ul>
-                                  {% endif %}
+                            {% assign aoe_category = user.formatted_buyer_categories["Area Of Expertise"] %}
+                            {% assign industry_category = user.formatted_buyer_categories['Industry'] %}
+                            {% assign languages_category = user.buyer_categories['Languages'] %}
 
-                                  {% if languages_category.children.size > 0 %}
-                                      <h3>{{ languages_category.name }}</h3>
-                                      <p>{{ languages_category.children | join: ', ' }}</p>
-                                  {% endif %}
-
-                                  {% if user.buyer_properties.bio != blank %}
-                                      <h3>Bio</h3>
-                                      {% if user.buyer_properties.bio.size > 350 %}
-                                         <div data-shorten-description>
-                                          <p data-description>{{ user.buyer_properties.bio | slice: 0, 350 }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
-                                          <div style='display: none;'  class="rest_of_text">{{ user.buyer_properties.bio | slice: 350, user.buyer_properties.bio.size }}</div>
+                            {% if aoe_category.children.size > 0 || industry_category.children.size > 0 || languages_category.children.size > 0 || user.buyer_properties.bio != blank %}
+                                <div class="content">
+                                    <div class="props">
+                                    {% if aoe_category.children.size > 0 %}
+                                        <div class="prop">
+                                            <h3>{{ aoe_category.name }}</h3>
+                                            <ul class="short-list">
+                                                {% for expertise in aoe_category.children %}
+                                                <li>{{ expertise[-1] }}</li>
+                                                {% endfor %}
+                                            </ul>
                                         </div>
-                                      {% else %}
-                                        <p>{{ user.buyer_properties.bio }}</p>
-                                      {% endif %}
-                                  {% endif %}
+                                    {% endif %}
+
+                                    {% if industry_category.children.size > 0 %}
+                                        <div class="prop">
+                                            <h3>{{ industry_category.name }}</h3>
+                                            <ul class="short-list">
+                                                {% for industry in industry_category.children %}
+                                                <li>{{ industry[-1] }}</li>
+                                                {% endfor %}
+                                            </ul>
+                                        </div>
+                                    {% endif %}
+
+                                    {% if languages_category.children.size > 0 %}
+                                        <div class="prop">
+                                            <h3>{{ languages_category.name }}</h3>
+                                            <p>{{ languages_category.children | join: ', ' }}</p>
+                                        </div>
+                                    {% endif %}
+
+                                    </div>
+
+                                    {% if user.buyer_properties.bio != blank %}
+                                        <h3>Bio</h3>
+                                        {% if user.buyer_properties.bio.size > 350 %}
+                                           <div data-shorten-description>
+                                            <p data-description>{{ user.buyer_properties.bio | slice: 0, 350 }}<span class="show_more_container">...<a class="show_more_link"> show more</a></span></p>
+                                            <div style='display: none;'  class="rest_of_text">{{ user.buyer_properties.bio | slice: 350, user.buyer_properties.bio.size }}</div>
+                                          </div>
+                                        {% else %}
+                                          <p>{{ user.buyer_properties.bio }}</p>
+                                        {% endif %}
+                                    {% endif %}
                               </div>
                           {% endif %}
                       </div>
-
-                      <aside class="sidebar">
-                          <ul class="actions-a">
-                              {% if current_user != blank and current_user.has_seller_profile? %}
-                                  <li><a href="#project-invite-{{ user.id }}" class="button-a" data-project-invite-trigger>Invite to project</a></li>
-                              {% endif %}
-
-                              <li>{% include 'shared/components/wish_list_button_injection.html', object: user %}</li>
-                              {% if user.has_active_blog? %}
-                                  <li><a href="{{ user.user_blog_posts_list_path }}" class="button-b action-blog">View Blog</a></li>
-                              {% endif %}
-                              {% if user.buyer_properties['linkedin_url'] != blank %}
-                                  <li><a href="{{ user.buyer_properties['linkedin_url'] }}" class="button-b action-linkedin" target="_blank">LinkedIn Bio</a></li>
-                              {% endif %}
-                          </ul>
-                      </aside>
 
                       {% if user.tags.size > 0 %}
                       <div class="tags-a tags-short-list">
