NM 5537 Migrate bower to npm

--- a/app/frontend/stylesheets/community.scss
+++ b/app/frontend/stylesheets/community.scss
@@ -1,6 +1,6 @@
 @import "intel/base";
 @import "intel/mixins";
-@import "Jcrop/css/jquery.Jcrop";
+@import "jquery-jcrop/css/jquery.Jcrop";
 
 @import "intel/overrides/jcrop";
 
