--- a/app/frontend/stylesheets/instance_wizard.scss
+++ b/app/frontend/stylesheets/instance_wizard.scss
@@ -1,4 +1,4 @@
-@import "instance_wizard/bootstrap.min";
+@import "bootstrap-sass/assets/stylesheets/bootstrap";
 @import "instance_wizard/bootstrap-select";
 @import "instance_wizard/component";
 
